style~fix element center bug cause by whitespace pre"

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
   bottom: 0;
   height: 100vh;
   width: 100vw;
-  white-space: pre; 
+  white-space: pre-line; 
   backdrop-filter: blur(1px) grayscale(.8);
 } 
 
@@ -35,11 +35,12 @@ body{
   background-color: cyan;
   width: fit-content;
   margin: auto; 
-  padding: 0rem 1rem;
+  margin-top: 5%;
+  padding: .5rem 2rem 2rem 2rem;
 }
 
 .popup--child >* {
-  margin-left: -5rem;
+  /* margin-left: -5rem; */
 }
 
 #book-container{
